--- a/style.css
+++ b/style.css
@@ -85,6 +85,17 @@ body {
     background-color: #424242;
 }
 
+.form-area form .new-user {
+    display: flex;
+    align-items: center;
+   padding-top: 0.5rem;
+}
+.form-area form .new-user a {
+    color: green;
+    padding-left: 0.5rem;
+    font-weight: bold;
+}
+
 .invalid {
     color: orangered;
     position: absolute;
